--- a/views/partials/NavBarTop.jade
+++ b/views/partials/NavBarTop.jade
@@ -7,8 +7,8 @@
     .navbar-inner
         .container
             ul.nav
-                li(ng-class="{active: location.path() == '/bio'}")
-                    a(href='bio') Bio
+                li(ng-class="{active: location.path() == '/about'}")
+                    a(href='about') About
                 li(ng-class="{active: location.path() == '/projects'}")
                     a(href='projects') Projects
                 li(ng-class="{active: location.path() == '/resume'}")
