--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,44 +1,46 @@
 /* app css stylesheet */
 
-a:hover{
-    text-decoration:none;
+body{
+    padding-top:40px;
+    padding-bottom: 40px;
 }
 
 .hero-unit{
     color: #ffffff;
     background: #58A9E3;
     border-radius: 0;
-
-
-  }
-
-body{
-    padding-top:40px;
-    padding-bottom: 40px;
+    margin-bottom: 0;
 }
 
+a:hover{
+    text-decoration:none;
+}
 
-.picture{
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    background-color: #91B5DB;
-    border-top-color: #91B5DB;
-    border-left-color: #91B5DB;
-    border-right-color: #7591b1;
-    border-bottom-color: #7591b1;
-    border-width: 4px;
-    border-style: solid;
+/*Document Styles------------*/
+
+.documentArea{
+    background-color: #ffffff;
+    border: 1px solid #bbbbbb;
+    max-width: 54em;
+    margin-left: auto;
+    margin-right: auto;
+    -moz-box-shadow:    2px 2px 10px 0px #999CA0;
+    -webkit-box-shadow: 2px 2px 10px 0px #999CA0;
+    box-shadow:         2px 2px 10px 0px #999CA0;
+}
+
+.document {
+   padding: 2em;
+}
+
+.Section{
+    margin-top: 1em;
 }
 
 .SectionHeader{
     border-top: solid 1px black;
     border-bottom: solid 1px black;
-
-    margin-bottom: .5em;
-    margin-top: 2em;
-
-    padding: 2px 1px;
+    padding: .25em;
 }
 
 .SectionTitle{
@@ -46,58 +48,35 @@ body{
     font-weight: bold;
 }
 
-.SectionContent{
+.SectionItem{
     max-width: 40em;
     margin-left: 3em;
     margin-top: 1em;
-    margin-bottom: 1em;
 }
-
-.document {
-    min-height: 20px;
-    padding: 19px;
-    margin-bottom: 20px;
-    background-color: #ffffff;
-    border: 1px solid #bbbbbb;
-    max-width: 48em;
-    margin-left: auto;
-    margin-right: auto  ;
-}
-
-.documentshadow {
-    -moz-box-shadow:    2px 2px 10px 0px #999CA0;
-    -webkit-box-shadow: 2px 2px 10px 0px #999CA0;
-    box-shadow:         2px 2px 10px 0px #999CA0;
-}
-
-.btnmargin{
-    margin-left: .5em;
-    line-height: inherit;
-    top: 50%;
- }
-
-
-.input-append,
-.input-prepend {
-    margin-bottom: 0;
+.SectionItem_Edit{
+    max-width: 41em;
+    margin-left: 2em;
+    margin-top: 1em;
+    border: dashed  1px #bbbbbb;
+    padding: 1em;
 }
 
 .docButtons{
-    margin-bottom: 20px;
-
+    margin-top: 30px;
+    max-width: 54em;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-.docbutton{
-    margin-bottom: 3px;
+.SectionItem_button{
+    margin-bottom: 10px;
 }
-.docH3{
-    font-size: 24.5px;
-    line-height: 40px;
-    margin: 10px 0;
-    font-family: inherit;
+
+.docTitle{
+    font-size: 2.5em;
     font-weight: bold;
-    color: inherit;
     text-rendering: optimizelegibility;
+    margin: .5em 0;
 }
 
 input[type="text"], input[type="email"] , input[type="tel"] {
@@ -108,14 +87,16 @@ input[type="text"], input[type="email"] , input[type="tel"] {
     border: inherit;
     border-bottom: 1px dashed #58A9E3;
     height: inherit;
-    padding: inherit;
-    margin: inherit;
+    /*padding: inherit;*/
+    /*margin: inherit;*/
+    margin-bottom: 0;
     color: inherit;
     text-transform: inherit;
     background: #ddedf9;
 }
-
 textarea{
     background: #ddedf9;
     color: inherit;
+    margin-bottom: 0;
 }
+/*Document Styles------------*/
