--- a/views/index.jade
+++ b/views/index.jade
@@ -13,10 +13,11 @@ block body
 
 
     script(src='js/lib/jquery-1.9.1.js')
-    script(src='js/lib/bootstrap.js')
     script(src='js/lib/angular/angular.js')
+    script(src='js/lib/angular-strap.js')
     script(src='js/app.js')
     script(src='js/controllers.js')
     script(src='js/directives.js')
     //script(src='js/services.js')
     //script(src='js/filters.js')
+
