--- a/views/partials/DocumentButtons.jade
+++ b/views/partials/DocumentButtons.jade
@@ -5,8 +5,8 @@
 
 .row
     .span12
-        .readtext
-            ul.inline.pull-right.docButtons
+        .docButtons
+            ul.inline.pull-right
                 li(ng-show="editMode")
                     a.btn.btn-primary(ng-click="saveDocument()")
                         i.icon-ok-circle.icon-white
@@ -19,9 +19,3 @@
                     button.btn.btn-primary(ng-click="editMode= true")
                         i.icon-wrench.icon-white
                         |  Edit
-                //li(ng-hide="editMode")
-                //    a.btn.btn-primary(href='javascript:window.print()')
-                //        i.icon-print.icon-white
-                //        |  Print
-                //li
-                //    a.btn.bottomshadow(href='#Save') Save as PDF
