cleanup, ng-animate!

--- a/views/partials/Projects.jade
+++ b/views/partials/Projects.jade
@@ -6,8 +6,8 @@
 
 
 .row-fluid
-    .span10.offset1
-        h4 Community
+    .span12
+        h3 Community
         .divider
         ul.thumbnails
             li.span4
@@ -25,9 +25,9 @@
 
 
 
-.row-fluid
-    .span10.offset1
-        h4 Projects
+.row
+    .span12
+        h3 Projects
         .divider
 
         ul.thumbnails
