--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,13 +24,15 @@ a:hover{
     max-width: 54em;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 3em;
     -moz-box-shadow:    2px 2px 10px 0px #999CA0;
     -webkit-box-shadow: 2px 2px 10px 0px #999CA0;
     box-shadow:         2px 2px 10px 0px #999CA0;
 }
 
 .document {
-   padding: 2em;
+    padding: 2em;
+
 }
 
 .Section{
@@ -93,6 +95,7 @@ input[type="text"], input[type="email"] , input[type="tel"] {
     color: inherit;
     text-transform: inherit;
     background: #ddedf9;
+
 }
 textarea{
     background: #ddedf9;
@@ -100,3 +103,125 @@ textarea{
     margin-bottom: 0;
 }
 /*Document Styles------------*/
+
+
+/*------ng-Animate------------*/
+.slide-frame {
+    position:relative;
+    height:180px;
+    overflow:hidden;
+}
+
+.slide-frame > div {
+    width:100%;
+}
+
+.slide-enter-setup {
+    position:absolute;
+    left:0;
+    top:-100px;
+}
+
+.slide-enter-start {
+    top:0;
+}
+
+.slide-leave-setup {
+    position:absolute;
+    top:0;
+}
+
+.slide-leave-start {
+    top:200px;
+}
+
+.wave-enter-setup {
+    position:absolute;
+    left:100%;
+}
+
+.wave-enter-start {
+    left:0;
+}
+
+.wave-leave-setup {
+    position:absolute;
+    left:0;
+}
+
+.wave-leave-start {
+    left:-100%;
+}
+
+.slide-enter-setup, .slide-leave-setup, .wave-enter-setup, .wave-leave-setup, .fade-hide-setup, .fade-show-setup {
+    -webkit-transition:all  cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -moz-transition:all     cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -o-transition:all       cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition:all          cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+}
+
+.fade-hide-setup {
+    opacity:1;
+}
+.fade-hide-setup.fade-hide-start {
+    opacity:0;
+}
+
+.fade-show-setup{
+    opacity:0;
+}
+.fade-show-setup.fade-show-start{
+    opacity:1;
+}
+
+.repeat-enter-setup {
+    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+
+    opacity:0;
+    height:0;
+    position:relative;
+}
+
+.repeat-enter-setup.repeat-enter-start {
+    opacity:1;
+    height:50px;
+}
+
+.repeat-leave-setup, .repeat-show-setup, .repeat-hide-setup  {
+    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+
+    opacity:1;
+    position:relative;
+    height:50px;
+    left:0;
+}
+
+.repeat-leave-setup.repeat-leave-start {
+    opacity:0;
+    height:0;
+}
+
+.repeat-show-setup {
+    opacity:0;
+    top:-30px;
+}
+.repeat-show-start {
+    opacity:1;
+    top:0;
+}
+
+.repeat-hide-setup {
+    opacity:1;
+    top:0;
+}
+.repeat-hide-start {
+    opacity:0;
+    top:-30px;
+}
+/*------ng-Animate------------*/
