--- a/views/index.jade
+++ b/views/index.jade
@@ -1,23 +1,39 @@
-extends layout
+!!!
+html(ng-app="myApp")
+    head
+        meta(charset='utf8')
+        base(href='/')
+        title Matt Lovan
+        link(rel='stylesheet', href='/css/bootstrap.css')
+        link(rel='stylesheet', href='/css/bootstrap_bluebuttons.css')
+        link(rel='stylesheet', href='/css/app.css')
+        script
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-block body
+            ga('create', 'UA-40720061-1', 'herokuapp.com');
+            ga('send', 'pageview');
 
-    include partials/NavBarTop
+    body
+        include partials/page/NavBarTop
 
-    include partials/Header
+        include partials/page/Header
 
-    .container
-        div(ng-view)
+        .container
+            div(ng-view, ng-animate="{enter: 'fade-show', leave: 'face-hide'}")
 
-    include partials/NavBarBottom
+        include partials/page/NavBarBottom
 
 
-    script(src='js/lib/jquery-1.9.1.js')
-    script(src='js/lib/angular/angular.js')
-    script(src='js/lib/angular-strap.js')
-    script(src='js/app.js')
-    script(src='js/controllers.js')
-    script(src='js/directives.js')
-    //script(src='js/services.js')
-    //script(src='js/filters.js')
-
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
+        script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.min.js')
+        script(src='js/lib/bootstrap.js')
+        //script(src='js/lib/angular-strap.js')
+        //script(src='js/lib/datepicker.js')
+        script(src='js/app.js')
+        script(src='js/controllers.js')
+        script(src='js/directives.js')
+        //script(src='js/services.js')
+        //script(src='js/filters.js')
