Add github API call, add table to 'About' page

--- a/views/partials/About.jade
+++ b/views/partials/About.jade
@@ -4,7 +4,7 @@
    Time: 11:25 AM
 
 
-h3 About this site
+h3 Architecture
 .btn-group
     button.btn.btn-primary(data-ng-click='slide=\'one\'', ng-class='{active: slide==\'one\'}') Client-side
     button.btn.btn-primary(data-ng-click='slide=\'two\'', ng-class='{active: slide==\'two\'}') Web server
@@ -31,3 +31,9 @@ h3 About this site
             .span9
                 p "Heroku is a polyglot cloud application platform. With Heroku, you don’t need to think about servers at all. You can write apps in the programming language of your choice, back it with add-on resources such as SQL and NoSQL databases, Memcached, and many others. You manage your app using the Heroku command-line tool and you deploy code using the Git revision control system, all running on the Heroku infrastructure."
                 a(href="https://www.heroku.com/", target="_blank") Heroku
+
+
+
+h3 Github Repository History
+.well
+    include Github
