--- a/views/partials/page/Header.jade
+++ b/views/partials/page/Header.jade
@@ -9,7 +9,7 @@
         .row
             .span11
                 h1 Matt Lovan
-                p web development a·fi·ci·o·na·do
+                p web dev
 
             .span1
 
