--- a/views/partials/page/NavBarBottom.jade
+++ b/views/partials/page/NavBarBottom.jade
@@ -13,7 +13,7 @@
 
             ul.nav.pull-right
                 li(ng-class="{active: location.path() == '/about'}")
-                    a(href='about') About
+                    a(href='about') About this site
                 li(ng-class="{active: location.path() == '/projects'}")
                     a(href='projects') Projects
                 li(ng-class="{active: location.path() == '/resume'}")
