--- a/views/partials/page/NavBarTop.jade
+++ b/views/partials/page/NavBarTop.jade
@@ -8,7 +8,7 @@
         .container
             ul.nav
                 li(ng-class="{active: location.path() == '/about'}")
-                    a(href='about') About
+                    a(href='about') About this site
                 li(ng-class="{active: location.path() == '/projects'}")
                     a(href='projects') Projects
                 li(ng-class="{active: location.path() == '/resume'}")
