--- a/views/partials/Github.jade
+++ b/views/partials/Github.jade
@@ -10,9 +10,9 @@ div(ng-controller="GithubCtrl")
 
     table.table
         thead
-            th Time
+            th(style="width: 20%") Time
             th Commit Message
-            th View Changes
+            th(style="width: 15%") View Changes
 
         tbody
             tr(ng-repeat="item in commits")
