--- a/views/partials/Github.jade
+++ b/views/partials/Github.jade
@@ -6,7 +6,7 @@
 
 
 div(ng-controller="GithubCtrl")
-    .label.pull-right Updated: {{time | date:'medium'}}
+    .muted.pull-right Updated: {{time | date:'medium'}}
 
     table.table
         thead
