--- a/views/partials/Projects.jade
+++ b/views/partials/Projects.jade
@@ -5,10 +5,9 @@
 
 
 
-.row-fluid
+.row
     .span12
-        h3 Community
-        .divider
+        strong Community
         ul.thumbnails
             li.span4
                 a.thumbnail.text-center(href="https://github.com/MagRelo", target="_blank")
@@ -27,19 +26,17 @@
 
 .row
     .span12
-        h3 Projects
-        .divider
-
+        strong Projects
         ul.thumbnails
             li.span4
                 a.thumbnail.text-center(href="http://comparetreatment.herokuapp.com", target="_blank")
-                    img(src="img/pie-chart-icon.png", alt="")
+                    //img(src="img/pie-chart-icon.png", alt="")
                     h3 Compare Treatment
                     p Compare your treatments
 
             li.span4
                 .thumbnail.text-center
-                    img(src="img/dog-icon.png", alt="")
+                    //img(src="img/dog-icon.png", alt="")
                     h3 Dog Website
                     p Keep track of your litter
 
