--- a/views/partials/page/NavBarTop.jade
+++ b/views/partials/page/NavBarTop.jade
@@ -9,7 +9,7 @@
             ul.nav
                 li(ng-class="{active: location.path() == '/about'}")
                     a(href='about') About this site
-                li(ng-class="{active: location.path() == '/projects'}")
-                    a(href='projects') Projects
+                //li(ng-class="{active: location.path() == '/projects'}")
+                //    a(href='projects') Projects
                 li(ng-class="{active: location.path() == '/resume'}")
                     a(href='resume') Resume
