--- a/views/partials/page/NavBarBottom.jade
+++ b/views/partials/page/NavBarBottom.jade
@@ -14,8 +14,8 @@
             ul.nav.pull-right
                 li(ng-class="{active: location.path() == '/about'}")
                     a(href='about') About this site
-                li(ng-class="{active: location.path() == '/projects'}")
-                    a(href='projects') Projects
+                //li(ng-class="{active: location.path() == '/projects'}")
+                //    a(href='projects') Projects
                 li(ng-class="{active: location.path() == '/resume'}")
                     a(href='resume') Resume
 
