--- a/views/partials/page/Header.jade
+++ b/views/partials/page/Header.jade
@@ -4,22 +4,10 @@
    Time: 7:52 PM
 
 
-.hero-unit
-    .container
-        .row
-            .span11
-                h1 Matt Lovan
-                p web dev
 
-            .span1
-
-                ul.unstyled.text-center
-                    li
-                        a(href="http://twitter.com/mattlovan", target="_blank")
-                            img(src="img/twitter-bird-dark-bgs.png" , alt="twitter logo", height="40px", width="40px")
-
-                    li
-                        a(href="https://www.facebook.com/matt.lovan.1", target="_blank")
-                            img(src="img/FB-f-Logo__white_29.png", alt="facebook logo")
+div.Header
+    span.HeaderTitle Matt Lovan
+    span.HeaderSub  web developer
 
 
+div.backgroundimage
