--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,21 +1,78 @@
 /* app css stylesheet */
 
 body{
-    padding-top:40px;
-    padding-bottom: 40px;
+    background-color: #0C0D0F;
+    color: white;
 }
 
-.hero-unit{
-    color: #ffffff;
-    background: #58A9E3;
-    border-radius: 0;
-    margin-bottom: 0;
+h1,
+h2,
+h3,
+h4,
+h5{
+    font-family: sansita-one, sans-serif;
+    margin: 0;
 }
 
-a:hover{
-    text-decoration:none;
+.thumbContainer{
+    margin-top: 25px;
 }
 
+
+.backgroundimage{
+    background: url("/img/img_0033_2.png") center center no-repeat;
+    position: relative;
+    width: 100%;
+    height: 494px;
+    margin-bottom: 20px;
+    position: absolute;
+    border-top: solid 3px white;
+}
+
+.Header{
+    /*background: orange;*/
+    background: url("/img/plaid.png") 100% 100% no-repeat;
+    padding: 5px;
+}
+
+.HeaderTitle{
+
+    font-size: 38.5px;
+
+}
+.HeaderSub{
+
+    font-size: 18px;
+}
+
+
+.thumbbox{
+    height: 240px;
+    text-shadow: 3px 2px 6px #000;
+}
+
+.centerdiv {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    height: 180px;
+    width: 180px;
+    padding: 40px;
+    border: solid white;
+    border-radius: 180px;
+    background: black;
+;
+
+}
+
+.centerdiv:hover {
+    background: url("/img/plaid.png") -35px 20px;;
+    border: solid 3px white;
+
+}
 
 
 /*Document Styles------------*/
