--- a/views/index.jade
+++ b/views/index.jade
@@ -5,32 +5,26 @@ html(ng-app="myApp")
         base(href='/')
         title Matt Lovan
         link(rel='stylesheet', href='/css/bootstrap.css')
-        link(rel='stylesheet', href='/css/bootstrap_bluebuttons.css')
         link(rel='stylesheet', href='/css/app.css')
+        script(src="//use.edgefonts.net/sansita-one;chivo.js")
         script
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
             ga('create', 'UA-40720061-1', 'herokuapp.com');
             ga('send', 'pageview');
 
     body
-        include partials/page/NavBarTop
 
         include partials/page/Header
 
-        .container
+        .container.thumbContainer
             div(ng-view, ng-animate="{enter: 'fade-show', leave: 'face-hide'}")
-
-        include partials/page/NavBarBottom
-
 
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
         script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.min.js')
         script(src='js/lib/bootstrap.js')
-        //script(src='js/lib/angular-strap.js')
         //script(src='js/lib/datepicker.js')
         script(src='js/app.js')
         script(src='js/controllers.js')
