redesign, post-cleanup with examples

--- a/views/partials/Thumbs.jade
+++ b/views/partials/Thumbs.jade
@@ -7,30 +7,21 @@
 
     .col-md-4.col-sm-6
         .thumbbox
-            .centerdiv
-                h3 Projects
+            a.centerdiv(href="/demos")
+                h2 Demos
+
+    .col-md-4.col-sm-6
+        .thumbbox
+            a.centerdiv(href="/bio")
+                h2 About Me
 
     .col-md-4.col-sm-6
         .thumbbox
             .centerdiv
-                h3 Blog
+                h2 Projects
 
     .col-md-4.col-sm-6
         .thumbbox
             .centerdiv
-                h3 Bio
+                h2 Blog
 
-
-    .col-md-4.col-sm-6
-        .thumbbox
-            a.centerdiv(href="https://www.facebook.com/matt.lovan.1", target="_blank")
-                img(src="img/FB-f-Logo__white_29.png", alt="facebook logo")
-    .col-md-4.col-sm-6
-        .thumbbox
-            .centerdiv
-                h3 Demos
-
-    .col-md-4.col-sm-6
-        .thumbbox
-            a.centerdiv(href="http://twitter.com/mattlovan", target="_blank")
-                img(src="img/twitter-bird-dark-bgs.png" , alt="twitter logo", height="40px", width="40px")
