--- a/views/partials/page/Header.jade
+++ b/views/partials/page/Header.jade
@@ -3,11 +3,8 @@
    Date: 5/15/13
    Time: 7:52 PM
 
-
-
 div.Header
-    span.HeaderTitle Matt Lovan
-    span.HeaderSub  web developer
-
+    h1 Matt Lovan
+        small  web developer
 
 div.backgroundimage
