--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,52 +3,42 @@
 body{
     background-color: #0C0D0F;
     color: white;
+    font-family: Ubuntu, sans-serif;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5{
-    font-family: sansita-one, sans-serif;
-    margin: 0;
-}
 
-.thumbContainer{
-    margin-top: 25px;
-}
+.Header{
+    padding: 5px;
+    border-bottom: solid 3px white;
 
+    -webkit-transform-origin: 50% -30%;
+    -moz-transform-origin: 50% -30%;
+    -o-transform-origin: 50% -30%;
+    -ms-transform-origin: 50% -30%;
+    transform-origin: 50% -30%;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    -ms-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+}
 
 .backgroundimage{
     background: url("/img/img_0033_2.png") center center no-repeat;
     position: relative;
     width: 100%;
     height: 494px;
-    margin-bottom: 20px;
     position: absolute;
-    border-top: solid 3px white;
-}
-
-.Header{
-    /*background: orange;*/
-    background: url("/img/plaid.png") 100% 100% no-repeat;
-    padding: 5px;
-}
-
-.HeaderTitle{
-
-    font-size: 38.5px;
+    z-index: -1;
 
 }
-.HeaderSub{
 
-    font-size: 18px;
+.thumbContainer{
+    margin-top: 5px;
 }
-
 
 .thumbbox{
     height: 240px;
-    text-shadow: 3px 2px 6px #000;
 }
 
 .centerdiv {
@@ -60,20 +50,50 @@ h5{
     margin: auto;
     height: 180px;
     width: 180px;
-    padding: 40px;
+    padding: 30px;
     border: solid white;
     border-radius: 180px;
-    background: black;
-;
-
+    background: #404145;
+    background-image: url("/img/greyPanelGrad.png"), url("/img/greyPanelBlock.png");
+    background-repeat: repeat-x, repeat;
+    text-decoration: none;
+    color: #ffffff;
 }
+
+.centerdiv h1,h2,h3,h4 {
+    font-family: sansita-one, sans-serif;
+    text-shadow: 3px 2px 6px #000;
+}
+
+h1,h2,h3,h4 {
+    font-family: Ubuntu, sans-serif;
+    text-shadow: 3px 2px 6px #000;
+}
+
 
 .centerdiv:hover {
-    background: url("/img/plaid.png") -35px 20px;;
     border: solid 3px white;
+    text-decoration: none;
+    color: #ffffff;
+    background: #222222;
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+    transition: all 1s ease;
 
 }
 
+
+.panel{
+    background: #404145;
+    background-image: url("/img/greyPanelGrad.png"), url("/img/greyPanelBlock.png");
+    background-repeat: repeat-x, repeat;
+    border: solid 1px #444;
+    line-height: 1.5em;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+    padding: 10px 30px 20px 30px;
+}
 
 /*Document Styles------------*/
 
@@ -164,123 +184,15 @@ textarea{
 /*Document Styles------------*/
 
 
-/*------ng-Animate------------*/
-.slide-frame {
-    position:relative;
-    height:180px;
-    overflow:hidden;
+.slide.ng-enter > div,
+.slide.ng-leave > div {
+    -webkit-transition:0.5s linear all;
+    -moz-transition:0.5s linear all;
+    -o-transition:0.5s linear all;
+    transition:0.5s linear all;
 }
 
-.slide-frame > div {
-    width:100%;
-}
-
-.slide-enter-setup {
-    position:absolute;
-    left:0;
-    top:-100px;
-}
-
-.slide-enter-start {
-    top:0;
-}
-
-.slide-leave-setup {
-    position:absolute;
-    top:0;
-}
-
-.slide-leave-start {
-    top:200px;
-}
-
-.wave-enter-setup {
-    position:absolute;
-    left:100%;
-}
-
-.wave-enter-start {
-    left:0;
-}
-
-.wave-leave-setup {
-    position:absolute;
-    left:0;
-}
-
-.wave-leave-start {
-    left:-100%;
-}
-
-.slide-enter-setup, .slide-leave-setup, .wave-enter-setup, .wave-leave-setup, .fade-hide-setup, .fade-show-setup {
-    -webkit-transition:all  cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -moz-transition:all     cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -o-transition:all       cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    transition:all          cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-}
-
-.fade-hide-setup {
-    opacity:1;
-}
-.fade-hide-setup.fade-hide-start {
-    opacity:0;
-}
-
-.fade-show-setup{
-    opacity:0;
-}
-.fade-show-setup.fade-show-start{
-    opacity:1;
-}
-
-.repeat-enter-setup {
-    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-
-    opacity:0;
-    height:0;
-    position:relative;
-}
-
-.repeat-enter-setup.repeat-enter-start {
-    opacity:1;
-    height:50px;
-}
-
-.repeat-leave-setup, .repeat-show-setup, .repeat-hide-setup  {
-    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-
-    opacity:1;
-    position:relative;
-    height:50px;
-    left:0;
-}
-
-.repeat-leave-setup.repeat-leave-start {
-    opacity:0;
-    height:0;
-}
-
-.repeat-show-setup {
-    opacity:0;
-    top:-30px;
-}
-.repeat-show-start {
-    opacity:1;
-    top:0;
-}
-
-.repeat-hide-setup {
-    opacity:1;
-    top:0;
-}
-.repeat-hide-start {
-    opacity:0;
-    top:-30px;
-}
-/*------ng-Animate------------*/
+.slide.ng-enter { }        /* starting animations for enter */
+.slide.ng-enter-active { } /* terminal animations for enter */
+.slide.ng-leave { }        /* starting animations for leave */
+.slide.ng-leave-active { } /* terminal animations for leave */
