--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ html(ng-app="myApp")
         title Matt Lovan
         link(rel='stylesheet', href='/css/bootstrap.css')
         link(rel='stylesheet', href='/css/app.css')
-        script(src="//use.edgefonts.net/sansita-one;chivo.js")
+        link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Ubuntu:regular,italic,bold,bolditalic",  type="text/css")
         script
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,12 +20,10 @@ html(ng-app="myApp")
         include partials/page/Header
 
         .container.thumbContainer
-            div(ng-view, ng-animate="{enter: 'fade-show', leave: 'face-hide'}")
+            div(ng-view class="slide")
 
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
         script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.min.js')
-        script(src='js/lib/bootstrap.js')
-        //script(src='js/lib/datepicker.js')
         script(src='js/app.js')
         script(src='js/controllers.js')
         script(src='js/directives.js')
