--- a/views/partials/Thumbs.jade
+++ b/views/partials/Thumbs.jade
@@ -8,20 +8,17 @@
     .col-md-4.col-sm-6
         .thumbbox
             a.centerdiv(href="/demos")
-                h2 Demos
+                h2 blog
 
     .col-md-4.col-sm-6
         .thumbbox
             a.centerdiv(href="/bio")
-                h2 About Me
+                h2 bio
 
     .col-md-4.col-sm-6
         .thumbbox
             .centerdiv
-                h2 Projects
+                h2 projects
 
-    .col-md-4.col-sm-6
-        .thumbbox
-            .centerdiv
-                h2 Blog
+
 
