--- a/views/partials/page/Header.jade
+++ b/views/partials/page/Header.jade
@@ -3,8 +3,16 @@
    Date: 5/15/13
    Time: 7:52 PM
 
-div.Header
-    h1 Matt Lovan
-        small  web developer
+div.header
+    .stripegroup
 
-div.backgroundimage
+        .twostripe
+        .threestripe
+        .fourstripe
+
+
+    a(href="/")
+        h1 Matt Lovan
+            small  web developer
+
+//div.backgroundimage
