--- a/views/partials/Thumbs.jade
+++ b/views/partials/Thumbs.jade
@@ -20,5 +20,8 @@
             .centerdiv
                 h2 projects
 
-
+    .col-md-4.col-sm-6
+        .thumbbox
+            a.centerdiv(href="/grid")
+                h2 grid
 
