--- a/views/partials/page/Header.jade
+++ b/views/partials/page/Header.jade
@@ -4,6 +4,8 @@
    Time: 7:52 PM
 
 div.header
+    include 3dlogo
+
     .stripegroup
 
         .twostripe
@@ -15,4 +17,3 @@ div.header
         h1 Matt Lovan
             small  web developer
 
-//div.backgroundimage
