--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -2,7 +2,8 @@
 @font-face {font-family: 'Planet Estyle'; src: URL('PLANE.TTF');}
 
 body{
-    background-color: #424747;
+    /*background-color: #424747;*/
+    background-color: rgba(0, 70, 80, 1);
     color: #e7f3f4;
     font-family: Ubuntu, sans-serif;
 }
@@ -19,17 +20,17 @@ h1,h2,h3,h4,h5{
 }
 
 h1, .h1 {
-    font-size: 60px;
-    text-shadow: 2px 2px 6px rgba(0, 33, 35, 0.95);
+    font-size: 70px;
+    text-shadow: 0 1px 10px rgb(54, 63, 62);
+    margin-top: 50px;
 }
 
-h2{
-    font-size: 30px;
-    font-family: 'Planet Estyle', sans-serif;
+h2, h3{
+   font-family: 'Planet Estyle', sans-serif;
 }
 
 .header{
-    margin-bottom: 30px;
+    margin-bottom: 40px;
 }
 
 .header h1{
@@ -47,8 +48,8 @@ h1 small {
 
 .stripegroup{
     width: 100%;
-    border-bottom: solid 1px rgb(54, 63, 62);
-    box-shadow: 1px 0 10px rgb(54, 63, 62);
+    /*border-bottom: solid 1px rgb(54, 63, 62);*/
+    box-shadow: 0 2px 10px rgb(54, 63, 62);
 }
 
 .twostripe{
@@ -83,7 +84,8 @@ h1 small {
     width: 270px;
     text-align: center;
     border: solid 1px #00c0dd;
-    background-color: #005F6B;
+    border-radius: 4px;
+    background: rgba(54, 63, 62, 0.5);
     box-shadow: 2px 2px 3px rgba(0, 33, 35, 0.86);
 }
 
@@ -91,13 +93,14 @@ h1 small {
 
 .centerdiv:hover{
     background-color: #008C9E;
+    background: rgba(0, 140, 158, 0.5);
     text-shadow: 1px 1px 2px rgba(38, 47, 46, .9);
-    border: solid 1px #00C0DD;
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s linear;
-    -o-transition: all 0.5s linear;
-    -ms-transition: all 0.5s linear;
-    transition: all 0.5s ease;
+    border: solid 1px #00DFFC;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all    0.3s linear;
+    -o-transition: all      0.3s linear;
+    -ms-transition: all     0.3s linear;
+    transition: all         0.3s ease;
 }
 
 .centerdiv:active{
@@ -123,7 +126,8 @@ h1 small {
 }
 
 .strategyPanel{
-    background-color: #424747;
+    //background-color: #424747;
+    background-color: rgba(54, 63, 62, 0.5);
     border-radius: 5px;
 }
 
@@ -195,14 +199,4 @@ h1 small {
 
     /* The animation preparation code */
     opacity: 0;
-}
-
-/*
- Keep in mind that you want to combine both CSS
- classes together to avoid any CSS-specificity
- conflicts
-*/
-.animate-enter-setup.animate-enter-start {
-    /* The animation code itself */
-    opacity: 1;
 }
