--- a/views/index.jade
+++ b/views/index.jade
@@ -6,6 +6,7 @@ html(ng-app="myApp")
         title Matt Lovan
         link(rel='stylesheet', href='/css/bootstrap.css')
         link(rel='stylesheet', href='/css/app2.css')
+        link(rel='stylesheet', href='/css/3dLogo.css')
         script
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -21,7 +22,7 @@ html(ng-app="myApp")
         .container.appContainer
             div(ng-view, class="animate", ng-animate=" 'animate' ")
 
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
+        //script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
         script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.1.4/angular.min.js')
         script(src='js/app.js')
         script(src='js/controllers.js')
