--- a/public/css/3dLogo.css
+++ b/public/css/3dLogo.css
@@ -1,4 +1,4 @@
-#tridiv{
+/* /!\ You need to add vendor prefixes in order to render the CSS properly (or simply use http://leaverou.github.io/prefixfree/) /!\ */ #tridiv{
     /*perspective*/
     -webkit-perspective:800px;
     -moz-perspective:800px;
@@ -9,10 +9,10 @@
     overflow:hidden;
     width:100%;
     height:100%;
-    background:#424747;
-    font-size:245%;
-    z-index:-1;
-    opacity:.5;
+    background: transparent;
+    font-size: 175%;
+    opacity: .5;
+    z-index: -1;
 }
 .scene, .shape, .face, .face-wrapper, .cr{
     position:absolute;
@@ -26,9 +26,7 @@
 .scene{
     width:80em;
     height:80em;
-    top:12%;
-    left:10%;
-    margin:-39.5em 0 0 -40em;
+    margin:-36em 0 0 -34em;
 }
 .shape{
     top:50%;
