--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -21,8 +21,8 @@ h1,h2,h3,h4,h5{
 
 h1, .h1 {
     font-size: 70px;
-    text-shadow: 0 1px 10px rgb(54, 63, 62);
-    margin-top: 50px;
+    text-shadow: 2px 2px 8px rgb(54, 63, 62);
+    margin-top: 24px;
 }
 
 h2, h3{
@@ -49,7 +49,7 @@ h1 small {
 .stripegroup{
     width: 100%;
     /*border-bottom: solid 1px rgb(54, 63, 62);*/
-    box-shadow: 0 2px 10px rgb(54, 63, 62);
+    box-shadow: 2px 2px 8px rgb(54, 63, 62);
 }
 
 .twostripe{
@@ -86,7 +86,7 @@ h1 small {
     border: solid 1px #00c0dd;
     border-radius: 4px;
     background: rgba(54, 63, 62, 0.5);
-    box-shadow: 2px 2px 3px rgba(0, 33, 35, 0.86);
+    box-shadow: 2px 2px 4px rgba(54, 63, 62, 0.5);
 }
 
 
@@ -95,7 +95,7 @@ h1 small {
     background-color: #008C9E;
     background: rgba(0, 140, 158, 0.5);
     text-shadow: 1px 1px 2px rgba(38, 47, 46, .9);
-    border: solid 1px #00DFFC;
+    border: solid 1px #00c0dd;
     -webkit-transition: all 0.3s ease;
     -moz-transition: all    0.3s linear;
     -o-transition: all      0.3s linear;
