--- a/views/partials/Demos.jade
+++ b/views/partials/Demos.jade
@@ -5,27 +5,14 @@
 
 
 .col-lg-offset-2.col-lg-8.col-md-offset-1.col-md-10
-    .panelTitle
-        h2 Demos/Blog
+    h2 Demos and posts
 
     .panel
-        h2 Parallax!
-        p Cool Library
+        h3 Redesign
+        p Thanks to <a href="http://tridiv.com/" target='_blank')> tridiv's 3d css creation tool </a> for the sweet 3d css logo in the header background.
+        p I also based the color scheme on this <a href="http://www.colourlovers.com/palette/482774/dream_magnet" target='_blank')> color pallete </a> from Colourlovers.
+        p Of course bootstrap3 deserves a mention as well. <a href="http://getbootstrap.com/" target='_blank')> Bootstrap is a collection of useful css rules and javascript components. </a>
 
     .panel
-        h2 Responsive Images
-        p build script in grunt?
-
-
-    .panel
-        h2 Build Process
-        p Yeoman
-
-    .panel
-        h2 MongoDB and NoSQL
-        p I was born in the highlands of Peru in 1984 to a poor young mother. I was quickly turned over to the local nuns - they called me Paulo. As was the custom a the time, I was placed in a crate of bananas as it was sealed and loaded onto a ship bound for America.
-
-
-    .panel
-        h2 Parallax!
-        p I was born in the highlands of Peru in 1984 to a poor young mother. I was quickly turned over to the local nuns - they called me Paulo. As was the custom a the time, I was placed in a crate of bananas as it was sealed and loaded onto a ship bound for America.
+        h3 Mulitply Game
+        p <a href="/grid"> Here </a>
