--- a/views/partials/Thumbs.jade
+++ b/views/partials/Thumbs.jade
@@ -7,8 +7,8 @@
 
     .col-md-4.col-sm-6
         .thumbbox
-            a.centerdiv(href="/demos")
-                h2 blog
+            a.centerdiv(href="/bio")
+                h2 contact
 
     .col-md-4.col-sm-6
         .thumbbox
@@ -17,11 +17,6 @@
 
     .col-md-4.col-sm-6
         .thumbbox
-            .centerdiv
-                h2 projects
-
-    .col-md-4.col-sm-6
-        .thumbbox
-            a.centerdiv(href="/grid")
-                h2 grid
+            a.centerdiv(href="/demos")
+                h2 demos
 
